--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 									data-speed="600"
 									data-start="2700"
 									data-end="9400"
-									data-endspeed="600"><img src="images/g-geo-genes-dia04DNA.gif" alt="" width="330" height="330">
+									data-endspeed="600"><img src="images/new_images/Chromosome-DNA-gene.png" alt="" width="330" height="330">
 								</div>
 
 								</li>
