--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 									data-start="2700"
 									data-end="9400"
 									data-endspeed="600"><img src="images/new_images/Chromosome-DNA-gene.png" alt="" width="330" height="330">
+									<h10>credit: https://en.wikipedia.org/wiki/File:Chromosome-DNA-gene.png </h10>
 								</div>
 
 								</li>
@@ -689,7 +690,7 @@
 						<div "class="col-md-12"">
 							<div class="call-to-action">
 								<h1 class="title">BioInformatics</h1>
-								<img class="displayed" src="images/Bioinformatics.png" alt="">
+								<img class="displayed" src="images/new_images/bioinformatics.jpg" alt="">
 								<p align="justify">BioInformatics is an interdisciplinary field that develops methods and software tools for understanding biological data. As an interdisciplinary field of science, bioinformatics combines computer science, statistics, mathematics, and engineering to analyze and interpret biological data. Bioinformatics is both an umbrella term for the body of biological studies that use computer programming as part of their methodology, as well as a reference to specific analysis "pipelines" that are repeatedly used, particularly in the fields of genetics and genomics. Common uses of bioinformatics include the identification of candidate genes and nucleotides (SNPs). Often, such identification is made with the aim of better understanding the genetic basis of disease, unique adaptations, desirable properties (esp. in agricultural species), or differences between populations. In a less formal way, bioinformatics also tries to understand the organisational principles within nucleic acid and protein sequences.
 								</p>
 							</div>
