--- a/index.html
+++ b/index.html
@@ -716,21 +716,27 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
-											<i class="fa fa-leaf"></i>
+											<p style="text-align:center;">
+												<img src="images/chromosome_sm.jpg" alt="" width="259" height="195" align="center">
+											</p>
 											<h2>People & Technology</h2>
 											<p> GenomicLabs selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
-											<i class="fa fa-laptop"></i>
+											<p style="text-align:center;">
+												<img src="images/new_images/verified.png" alt="" width="259" height="195" align="center">
+											</p>
 											<h2>Research Assistance</h2>
 											<p>GenomicLabs can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400">
-											<i class="fa fa-sitemap"></i>
+											<p style="text-align:center;">
+												<img src="images/new_images/training.png" alt="" width="259" height="195" align="center">
+											</p>
 											<h2>Training</h2>
 											<p> Building people for Genomics is one of the main focus for GenomicLabs. We have special training for students </p>
 										</div>
