--- a/index.html
+++ b/index.html
@@ -720,7 +720,10 @@
 												<img src="images/chromosome_sm.jpg" alt="" width="259" height="195" align="center">
 											</p>
 											<h2>People & Technology</h2>
-											<p> GenomicLabs selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
+											<p> 
+												GenomicLabs can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. 
+
+												GenomicLabs selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
@@ -728,8 +731,10 @@
 											<p style="text-align:center;">
 												<img src="images/new_images/verified.png" alt="" width="259" height="195" align="center">
 											</p>
-											<h2>Research Assistance</h2>
-											<p>GenomicLabs can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
+											<h2>Verification</h2>
+											<p>Science moves forward by corroboration – when researchers verify others’ results. Science advances faster when people waste less time pursuing false leads. No research paper can ever be considered to be the final word, but there are too many that do not stand up to further study.
+
+											There is growing alarm about results that cannot be reproduced.  Explanations include increased levels of scrutiny, complexity of experiments and statistics, and pressures on researchers. Journals, scientists, institutions and funders all have a part in tackling reproducibility. GenomicLabs helps this process by </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
