--- a/index.html
+++ b/index.html
@@ -743,7 +743,12 @@
 												<img src="images/new_images/training.png" alt="" width="259" height="195" align="center">
 											</center>
 											<h2 style="margin-top:15px;">Training</h2>
-											<p> Building people for Genomics is one of the main focus for GenomicLabs. We have special training for students </p>
+											<p> Building people for Genomics is one of the main focus for GenomicLabs. We have special training for students
+											We offer training on <b>BioInformatics Programming<b>. 
+											<a href="https://docs.google.com/forms/d/1PGNOXHpUmstgUFDse2k0nZp5DWi34p84PjCW_ItRl3c/viewform"> Apply here for BioInfomratics Class(needs gmail account)</a>
+
+											If you need scholorship while learning apply here. GenomicLabs pays needy and deserving students while they are learning. There are certain conditions, the application forms explains it all. <a href="url"> Apply here for Scholaships (needs gmail account)</a>
+											 </p>
 										</div>
 									</div>
 								</div>
