image size increases

--- a/index.html
+++ b/index.html
@@ -740,9 +740,9 @@
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400">
 											<center>
-												<img src="images/new_images/training1.jpg" alt="" width="259" height="195" align="center" style="margin-top:-15px;">
+												<img src="images/new_images/training1.jpg" alt="" width="" height="195" align="center"style="margin-top:-5px;">
 											</center>
-											<h2 style="margin-top:15px;">Training</h2>
+											<h2 style="margin-top:0px;">Training</h2>
 											<p> Building people for Genomics is one of the main focus for GenomicLabs. We have special training for students </p>
 										</div>
 									</div>
