--- a/index.html
+++ b/index.html
@@ -862,15 +862,15 @@
 							<h1 class="text-center">About GenomicLabs</h1>
 							<div class="separator"></div>
 							<p ><b>GenomicLabs’ Mission</b></br>
-								GenomicLabs is a not for profit organization, and is  focussed on making significant contributions to medical research in finding effective cure for cancer in our lifetime. GenomicLabs aims to achieve this by building a community of subject experts in bioinformatics to provide support for whole-genome research into inherited diseases and disorders with a genetic component, including cancer.
+								GenomicLabs is a not for profit  organization, and is  focussed on making significant contributions to medical research in finding effective cure for cancer in our lifetime. GenomicLabs aims to achieve this by building a community of subject experts in bioinformatics to provide support for whole-genome research into inherited diseases and disorders with a genetic component, including cancer.
 							</p>
 							<p>
 								<b>The Roadblocks</b></br>
-								Genomics is a fast-growing field in medical research and is a highly promising source of finding new insights into the genetic cause of disease. However, there are not enough Biologists/Genomists to meet the needs in bioinformatics/data analysis, biomedical engineering, system biology, and health economics/outcomes research. In addition to the shortage of resources, often the results published are either not reproducible or in some cases patently false.
+								Genomics is a fast-growing field in medical research and is a highly promising source of finding new insights into the genetic cause of disease. However, there are not enough Biologists/Genomists to meet the needs in bioinformatics/data analysis, biomedical engineering, system biology, and health economics/outcomes research. In addition to the shortage of resources, often the published results are either not reproducible or in some cases patently false.
 							</p>
 							<p>
 								<b>The Solution</b></br>
-								GenomicLabs supports by providing third-party verification for acceptance to save time and effort and improve efficiency of work done by these companies by  providing a “Verified By Genomic Labs” seal of approval. This seal of approval should give companies much needed credibility without compromising their “Intellectual Property” rights.  In addition to verification we also augment  companies with talent pool of researchers from the computational and life sciences fields to assist them in harnessing breakthrough in science. GenomicLabs’ ultimate goal is prevention, treatment or cure for cancer.
+								GenomicLabs supports by providing third-party verification for acceptance to save time and effort and improve efficiency of work done by these companies by  providing a “Verified By Genomic Labs” seal of approval. This seal of approval should give pharmaceutical and biotech companies the much needed credibility without compromising their “Intellectual Property” rights.  In addition to verification, we also augment  these companies with talent pool of researchers from the computational and life sciences fields to assist them in harnessing breakthrough in science. GenomicLabs’ ultimate goal is prevention, treatment or cure for cancer.
 
 							</p>
 							<!-- Tabs start -->
