--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>GenomicLabs</title>
-		<meta name="description" content="iDea a Bootstrap-based, Responsive HTML5 Template">
-		<meta name="author" content="htmlcoder.me">
+		<meta name="description" content="Genomic Labs, GenomicLabs, Cance Cure, BioInformatics">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
