--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>GenomicLabs</title>
-		<meta name="description" content="Genomic Labs, GenomicLabs, Cance Cure, BioInformatics">
+		<title>Genomic Labs</title>
+		<meta name="description" content="Genomic Labs, GenomicLabs, Cance Cure, BioInformatics, Next Generation Genomics">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
