--- a/index.html
+++ b/index.html
@@ -731,9 +731,9 @@
 												<img src="images/new_images/verified.png" alt="" width="259" height="195" align="center">
 											</center>
 											<h2 style="margin-top:4px;">Verification</h2>
-											<p>Science moves forward by corroboration – when researchers verify others’ results. Science advances faster when people waste less time pursuing false leads. No research paper can ever be considered to be the final word, but there are too many that do not stand up to further study.
+											<p>Bіоіnfоrmаtісѕ ѕоftwаrе ԛuаlіtу аѕѕurаnсе is еѕѕеntіаl іn gеnоmіс mеdісіnе. Sуѕtеmаtіс verification аnd validation of bioinformatics ѕоftwаrе іѕ dіffісult bесаuѕе іt is often nоt possible tо оbtаіn a realistic “gоld ѕtаndаrd” for ѕуѕtеmаtіс evaluation. Hеrе we аррlу a technique that оrіgіnаtеѕ from thе ѕоftwаrе testing lіtеrаturе, nаmеlу Metamorphic Testing (MT), tо ѕуѕtеmаtісаllу tеѕt thrее wіdеlу used short-read sequence аlіgnmеnt рrоgrаmѕ. 
 
-											There is growing alarm about results that cannot be reproduced.  Explanations include increased levels of scrutiny, complexity of experiments and statistics, and pressures on researchers. Journals, scientists, institutions and funders all have a part in tackling reproducibility. GenomicLabs helps this process by </p>
+											There is growing alarm about results that cannot be reproduced.  Explanations include increased levels of scrutiny, complexity of experiments and statistics, and pressures on researchers. Journals, scientists, institutions and funders all have a part in tackling reproducibility. GenomicLabs helps this process by verifying and providing "Verified By Genomic Labs" stamp as an independent thirdparty authority. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
